# vmware-vcf-architecture

./: .codecov.yml  .contributors-activation  .env.template  .github-verified  .gitignore  .gpg-verified  .imgbotconfig  .markdownlint.json  .pre-commit-config.yaml  .security-status  .trivyignore  .ultra-secure-status  .workflow-trigger  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  FOLDER_REFRESH.md  FREE-TIER-OPTIMIZATION.md  LICENSE  Makefile  README.md  SECURITY.md  TECHNICAL_NOTES.md  UPDATES.md  config.yml  docker-compose.yml  enhancement.md  main.py  package.json  performance.md  pyproject.toml  requirements-dev.txt  requirements.txt
.amazonq/: .refresh  .refresh.md  config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  copilot.yml  dependabot.yml  renovate.json  stale.yml  verified.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  contributors.yml  deploy.yml  release.yml  security-scan.yml  security.yml  weekly-activity.yml
config/: .refresh.md  vcf-config.template.yml
docs/: PULL-REQUEST-001.md  README.md  VCF-DESIGN.md  api.md  best-practices.md  configuration.md  development.md  faq.md  installation.md  kubernetes.md  monitoring.md  security.md  troubleshooting.md
examples/: .refresh.md  README.md
k8s/: deployment.yaml
scripts/: deploy-management-domain.sh  deploy-workload-domains.sh  setup.sh  validate-deployment.sh
tests/: .refresh  .refresh.md  conftest.py  test-enhancement.md  test_integration.py  test_main.py
